# FO4_Wrld

./: .gitignore  CHANGELOG.md  LICENSE  README.md  fallout_multiplayer_project_brainstorm.md  ttd_attach.bat
frida/: 01_enumerate.js  02_f4se_exports.js  03_find_player_pos.js  04_read_player_pos.js  05_stream_position.js  06_stream_pos_rot.js  07_bypass_drm.js  08_log_mutex.js  09_bypass_single_instance.js  10_find_npc.js  10b_verify_formid_offset.js  11_hwnd_tracer.js  12_m3_rotation_trace.js  13_m7_skin_bgsm_trace.js  14_load3d_callees_trace.js  15_player_bone_runtime_diff.js  16_skin_buffer_hunt.js  17_skin_buffer_hunt_v2.js  18_skin_update_hook_probe.js  19_setupgeom_dissect.js  20_setupgeom_classify.js  attach_buffer_hunt.py  attach_buffer_hunt_v2.py  attach_load3d_trace.py  attach_m7_trace.py  attach_player_bone_diff.py  attach_setupgeom_classify.py  attach_setupgeom_dissect.py  attach_skin_probe.py  spawn_and_log.py  spawn_fo4b.py  spawn_m3_debug.py  wait_and_attach_load3d.py
fw_launcher/: CMakeLists.txt  CMakePresets.json  build.bat  deploy.bat
fw_launcher/src/: main.cpp
fw_native/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.bat  deploy.bat  dxgi.def
fw_native/docs/: B5_asset_extraction_howto.md  B5_strada_A_plan.md  DEVIAZIONE_D3D11_to_CommonLibF4.md  PIVOT_StradaA_to_StradaB.md  tools-da-usare.md
fw_native/src/: config.cpp  config.h  dll_main.cpp  hook_manager.cpp  hook_manager.h  log.cpp  log.h  main_thread_dispatch.cpp  main_thread_dispatch.h  offsets.h  proxy_exports.cpp  ref_identity.cpp  ref_identity.h  version.cpp  version.h
fw_native/src/assets/: fwn_format.h  fwn_loader.cpp  fwn_loader.h
fw_native/src/engine/: engine_calls.cpp  engine_calls.h
fw_native/src/ghost/: actor_hijack.cpp  actor_hijack.h
fw_native/src/hooks/: bsmodelproc_hook.cpp  bsmodelproc_hook.h  container_hook.cpp  container_hook.h  door_hook.cpp  door_hook.h  engine_tracer.cpp  engine_tracer.h  equip_cycle.cpp  equip_cycle.h  equip_hook.cpp  equip_hook.h  install_all.cpp  install_all.h  kill_hook.cpp  kill_hook.h  lock_hook.cpp  lock_hook.h  main_menu_hook.cpp  main_menu_hook.h  pickup_hook.cpp  pickup_hook.h  player_pos_hook.cpp  player_pos_hook.h  put_hook.cpp  put_hook.h  subrefload_hook.cpp  subrefload_hook.h  worldstate_hook.cpp  worldstate_hook.h
fw_native/src/native/: bsgeo_input_cache.cpp  bsgeo_input_cache.h  clone_factory_tracker.cpp  clone_factory_tracker.h  ni_alloc_tracker.cpp  ni_alloc_tracker.h  ni_offsets.h  nif_path_cache.cpp  nif_path_cache.h  scene_inject.cpp  scene_inject.h  scene_walker.cpp  scene_walker.h  skin_rebind.cpp  skin_rebind.h  spai_prewarm.cpp  spai_prewarm.h  synthetic_refr.cpp  synthetic_refr.h  weapon_capture.cpp  weapon_capture.h  weapon_witness.cpp  weapon_witness.h
fw_native/src/net/: client.cpp  client.h  protocol.h  reliable.cpp  reliable.h  udp_socket.cpp  udp_socket.h
fw_native/src/render/: body_render.cpp  body_render.h  dsv_capture.cpp  dsv_capture.h  head_placeholder.cpp  head_placeholder.h  present_hook.cpp  present_hook.h  scene_render_hook.cpp  scene_render_hook.h  triangle_render.cpp  triangle_render.h  vp_capture.cpp  vp_capture.h
launcher/: README.md  __init__.py  config.py  fo4_ini.py  fw_config.py  main.py  orchestrator.py  procutil.py  start_A.bat  start_B.bat
net/: channel.py  protocol.py  reliable.py  state_snapshot.json  state_snapshot.json.1  state_snapshot.json.2  state_snapshot.json.3  state_snapshot.json.4  state_snapshot.json.5
net/client/: frida_bridge.py  main.py
net/legacy/: launch_all.bat  packet.py  receiver.py  receiver_npc.py  sender.py  server.py
net/server/: main.py  persistence.py  state.py  validator.py
net/snapshot-old/: state_snapshot.json.1  state_snapshot.json.2  state_snapshot.json.3  state_snapshot.json.4  state_snapshot.json.5  state_snapshot.json.bak_1776623223  state_snapshot.json.bak_1776626102  state_snapshot.json.bak_b1h3_1776720506  state_snapshot.json.bak_before_B1h_cleanup_1776718820  state_snapshot.json.bak_fresh_1776728352  state_snapshot.json.bak_scan_fix_1776719635
net/tests/: conftest.py  test_channel.py  test_client_e2e.py  test_container.py  test_periodic_rotation.py  test_persistence.py  test_persistence_e2e.py  test_protocol.py  test_quest_sync.py  test_reliable.py  test_server_integration.py  test_server_state.py  test_validator.py  test_world_state.py
re/: M8P1_capture1_analysis.txt  M8P1_load3d_dossier.txt  M8P2_refr_load3d_dossier.txt  M8P3_scene_register_dossier.txt  M8P3_skin_instance_dossier.txt  M8P3_skin_update_pass_AGENT_A.txt  M8P3_skin_update_pass_AGENT_B.txt  M8P3_skin_walker_dossier.txt  M8_strategic_decision.txt  _anim_graph_m7.py  _anim_graph_m7_2.py  _anim_graph_m7_3.py  _anim_graph_m7_4.py  _anim_graph_m7_5.py  _anim_graph_m7_6.py  _bgsm_deep.py  _bgsm_final.py  _bgsm_key_fns.py  _bgsm_lastp.py  _bgsm_probe.py  _bgsm_processor.py  _bgsm_summary.txt  _bgsm_tesvt.py  _bgsm_verify.py  _bgsm_walker.py  _bone_drive_correct.py  _bone_drive_correct2.py  _bone_drive_correct3.py  _bone_drive_correct4.py  _bone_drive_correct5.py  _check_highlevel.py  _find_simple_entry.py  _m8p1_load3d.py  _m8p1_load3d_callees.py  _m8p2_load3d.py  _m8p2_phase2.py  _m8p2_phase3.py  _m8p2_phase4.py  _m8p3_AGENT_B2.py  _m8p3_AGENT_B3.py  (+375 more)
tools/: container_op.py  spai_enum_weapons.py
